# malarm

./: ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  configure  configure.ac  malarm.desktop.in  malarm_main.c  malarm_main.h  malarm_ui.c  malarm_ui.h  malarm_util.c  malarm_util.h  org.maemo.malarm.service.in
debian/: changelog  control  rules
